--- a/src/components/Form/ToDos.module.css
+++ b/src/components/Form/ToDos.module.css
@@ -5,3 +5,9 @@
   flex-direction: column;
   gap: 2rem;
 }
+
+@media (width < 700px) {
+  .todos {
+    width: 80%;
+  }
+}
