--- a/src/components/List/taskView.module.css
+++ b/src/components/List/taskView.module.css
@@ -20,7 +20,7 @@
 .inner {
   background-color: rgb(238, 238, 238);
   max-width: 30rem;
-  max-height: 15rem;
+  max-height: 20rem;
   border-radius: 10px;
   border: solid 1px black;
   padding: 1rem 2rem;
@@ -29,12 +29,17 @@
 }
 
 h3 {
-  word-break: keep-all;
+  word-break: break-word;
 }
 
+.date {
+  text-align: left;
+  margin-bottom: 1rem;
+  font-style: italic;
+}
 .description {
   margin-top: 1rem;
-  word-break: keep-all;
+  word-break: break-word;
 }
 
 @keyframes appearance {
@@ -43,11 +48,5 @@ h3 {
   }
   to {
     opacity: 1;
-  }
-}
-
-@media (width < 700px) {
-  .inner {
-    max-width: 20rem;
   }
 }
